fix add-opens for cdi tests
Signed-off-by: olivier lamy <oliver.lamy@gmail.com>